# clayers

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  bump-version.py  clayers-harness.py  mock_sdk.py  test_clayers_harness.py
.claude/skills/clayers-brainstorm/: SKILL.md
.claude/skills/clayers-execute-plan/: SKILL.md
.claude/skills/clayers-onboard/: SKILL.md
.claude/skills/clayers-review-artifacts/: SKILL.md
.claude/skills/clayers-write-plan/: SKILL.md
.clayers/schemas/: artifact.xsd  catalog.xml  index.xsd  llm.xsd  organization.xsd  plan.xsd  postprocess.xslt  relation.xsd  source.xsd  terminology.xsd  testing.xsd
.github/workflows/: ci.yml  crates.yml  wheels.yml
clayers/clayers/: adopt.xml  agent-guidance.xml  architecture-model.xml  connectivity.xml  content.xml  decisions.xml  descriptions.xml  diagnostics-deliberation.xml  index.xml  integration.xml  layers.xml  merge.xml  overview.xml  plans.xml  query.xml  reading-maps.xml  remote-store.xml  revision.xml  schema.xml  search.xml  sources.xml  technical-documentation.xml  templates.xml  testing.xml  traceability.xml  validation.xml
crates/clayers/: Cargo.toml  agent-guidance.xml  build.rs
crates/clayers-py/: .gitignore  Cargo.toml  pyproject.toml
crates/clayers-py/python/clayers/: __init__.py  _cli.py  protocols.py
crates/clayers-py/python/clayers/compliance/: __init__.py
crates/clayers-py/python/clayers/repo/: __init__.py  aio.py
crates/clayers-py/python/clayers/xml/: __init__.py
crates/clayers-py/src/: errors.rs  knowledge_model.rs  lib.rs  query.rs
crates/clayers-py/src/repo/: compliance.rs  inner.rs  mod.rs  objects.rs  py_objects.rs  py_store.rs  repo_async.rs  repo_sync.rs  store.rs
crates/clayers-py/src/spec/: mod.rs  types.rs
crates/clayers-py/src/xml/: hash.rs  mod.rs
crates/clayers-py/tests/: conftest.py  test_compliance.py  test_content_hash.py  test_errors.py  test_imports.py  test_knowledge_model.py  test_repo_async.py  test_repo_sync.py  test_sqlite_store.py
crates/clayers-repo/: Cargo.toml
crates/clayers-repo/src/: conflict.rs  diff.rs  error.rs  export.rs  graph.rs  hash.rs  import.rs  lib.rs  merge.rs  object.rs  refs.rs  repo.rs  sync.rs
crates/clayers-repo/src/query/: mod.rs  tests.rs
crates/clayers-repo/src/store/: concurrency_tests.rs  memory.rs  mod.rs  prop_strategies.rs  prop_tests.rs  sqlite.rs  tests.rs
crates/clayers-repo/src/store/remote/: client.rs  codec.rs  mod.rs  server.rs  transport.rs  websocket.rs
crates/clayers-search/: Cargo.toml
crates/clayers-search/src/: embedder.rs  fingerprint.rs  index.rs  lib.rs  meta.rs  query.rs
crates/clayers-search/tests/: golden.rs
crates/clayers-spec/: Cargo.toml
crates/clayers-spec/src/: artifact.rs  assembly.rs  chunker.rs  connectivity.rs  coverage.rs  discovery.rs  drift.rs  fix.rs  hash.rs  lib.rs  namespace.rs  neighbors.rs  query.rs  rnc.rs  schema.rs  validate.rs  xsd_validation.rs
crates/clayers-xml/: Cargo.toml
crates/clayers-xml/src/: c14n.rs  catalog.rs  diff.rs  error.rs  hash.rs  lib.rs  query.rs  xslt.rs
crates/clayers-xml/src/rnc/: convert.rs  mod.rs  model.rs
crates/clayers/src/: adopt.rs  cli.rs  doc.rs  embedded.rs  gitignore.rs  lib.rs  main.rs  search_cmd.rs  serve.rs
crates/clayers/src/repo/: branch.rs  commit.rs  diff.rs  history.rs  init.rs  merge.rs  mod.rs  remote.rs  revert.rs  schema.rs  staging.rs
crates/clayers/tests/: cli_integration.rs  corpus_roundtrip.rs  remote_integration.rs
docs/superpowers/plans/: 2026-03-20-cli-server-integration.md  2026-03-20-python-api-layer.md
docs/superpowers/specs/: 2026-03-20-cli-server-integration-design.md  2026-03-20-python-api-layer-design.md
examples/payment-processing/: authorization.xml  disputes.xml  index.xml  overview.xml  payments-model.xml  reading-maps.xml  revision.xml  settlement.xml
experiments/: flask-ratelimiter.yaml  full-battery.yaml  gitea-webhooks.yaml  outline-simple-crud.yaml  paperless-1round.yaml  paperless-3rounds.yaml  paperless-cheap-spec.yaml  paperless-crosscut-refactor.yaml  paperless-opus-vs-opus.yaml  paperless-sonnet-vs-opus.yaml  smoke-battery.yaml
experiments/context-skill-benchmark/: README.md  questions.yaml  run.py
schemas/: catalog.xml  content.xsd  decision.xsd  deliberation.xsd  diagnostic.xsd  layer.xsd  llm.xsd  organization.xsd  plan.xsd  postprocess.xslt  prose.xsd  python.xsd  repository.xsd  revision.xsd  spec.xsd  terminology.xsd  uml-permissive.xsd  vcs.xsd  xmi-permissive.xsd
schemas/doc/: artifact.xslt  catchall.xslt  content.xslt  decision.xslt  deliberation.xslt  diagnostic.xslt  graph.xslt  llm.xslt  main.xslt  markdown.xslt  organization.xslt  plan.xslt  prose.xslt  python.xslt  relation.xslt  revision.xslt  source.xslt  terminology.xslt  testing.xslt
skills/: clayers-onboard.md  clayers-review-artifacts.md
