[package]
name = "clayers-py"
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
description = "Python bindings for clayers"
repository = "https://github.com/CognitiveLayers/clayers"

[lib]
name = "clayers_py"
crate-type = ["cdylib"]

[features]
default = ["sqlite", "cli"]
sqlite = ["clayers-repo/sqlite"]
cli = ["dep:clayers-cli"]
compliance = ["clayers-repo/compliance", "dep:serde_json", "dep:proptest"]

[dependencies]
chrono = "0.4"
clayers-cli = { version = "0.1.2", path = "../clayers", package = "clayers", optional = true }
clayers-repo = { version = "0.1.2", path = "../clayers-repo", features = ["serde"] }
clayers-spec = { version = "0.1.2", path = "../clayers-spec" }
clayers-xml = { version = "0.1.2", path = "../clayers-xml" }
pyo3 = { version = "0.28.2", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
async-stream = "0.3"
async-trait = "0.1"
futures-core = "0.3"
proptest = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread"] }
