[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "clayers"
version = "0.1.0"
requires-python = ">=3.9"
license = "Apache-2.0"
description = "Cognitive layers: structured XML specifications with version control and machine-verifiable traceability"
keywords = ["xml", "specification", "traceability", "version-control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/CognitiveLayers/clayers"
Repository = "https://github.com/CognitiveLayers/clayers"
Issues = "https://github.com/CognitiveLayers/clayers/issues"

[project.scripts]
clayers = "clayers._cli:main"

[project.optional-dependencies]
test = ["pytest"]
compliance = ["pytest"]

[tool.maturin]
features = ["pyo3/extension-module", "compliance", "cli"]
python-source = "python"
module-name = "clayers._clayers"
