[package]
name = "clayers-repo"
version = "0.1.0"
edition = "2024"

[features]
default = []
serde = ["dep:serde", "clayers-xml/serde", "chrono/serde"]
sqlite = ["serde", "dep:rusqlite", "dep:serde_json"]

[dependencies]
clayers-xml = { path = "../clayers-xml" }
xot = "0.31"
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
futures-core = "0.3"
async-stream = "0.3"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"], optional = true }
rusqlite = { version = "0.39", features = ["bundled"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
proptest = "1"

[lints]
workspace = true
