[package]
name = "clayers-repo"
version = "0.2.1"
edition = "2024"
license = "Apache-2.0"
description = "Content-addressed Merkle DAG repository for XML documents"
repository = "https://github.com/CognitiveLayers/clayers"

[features]
default = []
serde = ["dep:serde", "clayers-xml/serde", "chrono/serde"]
sqlite = ["serde", "dep:rusqlite", "dep:serde_json"]
remote = ["serde"]
websocket = ["remote", "dep:serde_json", "dep:tokio-tungstenite", "dep:futures-util", "dep:http"]
compliance = ["serde", "dep:proptest", "dep:tokio-stream", "tokio/rt-multi-thread"]

[dependencies]
clayers-xml = { version = "0.2.1", path = "../clayers-xml" }
xot = "0.31"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
futures-core = "0.3"
async-stream = "0.3"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"], optional = true }
rusqlite = { version = "0.39", features = ["bundled"], optional = true }
serde_json = { version = "1", optional = true }
tokio-tungstenite = { version = "0.29", optional = true }
futures-util = { version = "0.3", optional = true }
http = { version = "1", optional = true }
proptest = { version = "1", optional = true }
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
proptest = "1"

[lints]
workspace = true
