[package]
name = "clayers-spec"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Spec-aware logic for clayers (validate, drift, coverage, connectivity)"
repository = "https://github.com/CognitiveLayers/clayers"

[dependencies]
clayers-xml = { version = "0.2.0", path = "../clayers-xml" }
petgraph = "0.8"
sha2 = "0.10"
thiserror = "2"
xot = "0.31"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
