[package]
name = "clayers-xml"
version = "0.1.0"
edition = "2024"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
bergshamra-c14n = "0.3"
bytes = "1"
serde = { version = "1", optional = true }
sha2 = "0.10"
thiserror = "2"
xee-xpath = "0.1.5"
xot = "0.31"

[dev-dependencies]
serde_json = "1"
tempfile = "3"

[lints]
workspace = true
