[package]
name = "clayers-xml"
version = "0.1.3"
edition = "2024"
license = "Apache-2.0"
description = "Domain-agnostic XML utilities for clayers (C14N, hashing, RNC, catalog)"
repository = "https://github.com/CognitiveLayers/clayers"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
bergshamra-c14n = "0.3"
bytes = "1"
serde = { version = "1", optional = true }
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
xee-xpath = "0.1.5"
xot = "0.31"

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
