[package]
name = "clayers"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "clayers"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clayers-spec = { path = "../clayers-spec" }
clayers-repo = { path = "../clayers-repo", features = ["sqlite"] }
clayers-xml = { path = "../clayers-xml" }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
rusqlite = { version = "0.35", features = ["bundled"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints]
workspace = true
