[package]
name = "clayers"
version = "0.2.1"
edition = "2024"
license = "Apache-2.0"
description = "Cognitive layers: structured XML specifications with version control and machine-verifiable traceability"
repository = "https://github.com/CognitiveLayers/clayers"

[lib]
name = "clayers"
path = "src/lib.rs"

[[bin]]
name = "clayers"
path = "src/main.rs"

[features]
default = ["semantic-search"]
# The `clayers search` semantic-search subcommand. Pulls in
# `clayers-search` (fastembed + usearch + ONNX runtime). Bundled by
# default: search is a first-class feature. Power users who want a
# minimal CLI without the ML stack can build with `--no-default-features`.
semantic-search = ["dep:clayers-search"]

[dependencies]
anyhow = "1"
base64 = "0.22"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "native-tls-vendored"] }
clap = { version = "4", features = ["derive"] }
clayers-spec = { version = "0.2.1", path = "../clayers-spec" }
clayers-repo = { version = "0.2.1", path = "../clayers-repo", features = ["sqlite", "websocket"] }
clayers-search = { version = "0.2.1", path = "../clayers-search", optional = true }
clayers-xml = { version = "0.2.1", path = "../clayers-xml" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "signal"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
notify = { version = "8", features = ["macos_fsevent"] }
async-trait = "0.1"
getrandom = "0.4"

[dev-dependencies]
assert_cmd = "2"
chrono = "0.4"
predicates = "3"
rayon = "1.11.0"
regex = "1.12.3"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
xot = "0.31"

[lints]
workspace = true
